# mal

c/: CMakeLists.txt  Makefile  core.c  core.h  env.c  env.h  gc.c  gc.h  hash-map.c  hash-map.h  main.h  math.c  math.h  pcre.c  printer.c  printer.h  reader-test.c  reader.c  reader.h  readline.c  readline.h  step0_repl.c  step1_read_print.c  step2_eval.c  step3_env.c  step4_if_fn_do.c  step5_tco.c  step6_file.c  step7_quote.c  step8_macros.c  step9_try.c  stepstring.c  struct-test.c  types.c  types.h
tests/: step2_eval.mal  step4_if_fn_do.mal
